# django-practice

./: Dockerfile  compose.yaml  pyproject.toml
django_practice/: asgi.py  settings.py
django_practice/django_practice/: urls.py  wsgi.py
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html  results.html
typings/debug_toolbar/: toolbar.pyi
