[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = ""
authors = ["Donghyun Kim <temeddix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"

[tool.poetry.dev-dependencies]
ruff = "^0.8.0"
pyright = "^1.1.389"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
