[project]
name = "django-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django==5.1.3", "ruff==0.8.0", "pyright==1.1.389"]

[tool.uv]
no-cache = true # Docker doesn't allow modifying the home directory.

[tool.pyright]
typeCheckingMode = "strict"
