[project]
name = "django-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff==0.8.0",
    "pyright==1.1.389",
    "django==5.1.3",
    "django-stubs-ext==5.1.1",
    "django-debug-toolbar==4.4.6",
    "psycopg[binary,pool]==3.2.3",
]

[tool.uv]
no-cache = true # Docker doesn't allow modifying the home directory.

[tool.pyright]
typeCheckingMode = "strict"
